deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud9
  labels:
    name: cloud9
    app: cloud9
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: cloud9
  template:
    metadata:
      labels:
        name: cloud9
        app: cloud9
    spec:
      containers:
        - image: saidsef/cloud9-containerised:latest
          name: cloud9
          ports:
            - protocol: TCP
              containerPort: 9099
              name: cloud980
          volumeMounts:
            - name: cloud9-storage
              mountPath: /app/workspace
              subPath: data
            - name: docker-sock
              mountPath: /var/run/docker.sock
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          livenessProbe:
            exec:
              command:
                - pgrep
                - node
          readinessProbe:
            tcpSocket:
                port: 9099
      volumes:
        - name: cloud9-storage
          emptyDir: {}
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: File
