deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud9
  labels:
    name: cloud9
    app: cloud9
spec:
  type: NodePort
  selector:
    app: cloud9
  ports:
    - port: 9099
      protocol: TCP
      targetPort: 9099
